--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Metadata -->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="" />
+		<meta name="author" content="esydoc" />
 		<meta name="description" content="" />
-
-		<meta property="og:type" content="Website" />
-		<meta property="og:image" content="img/" />
-		<meta property="og:title" content="" />
-		<meta property="og:description" content="" />
-		<meta property="og:url" content="" />
-
-		<title></title>
-
+		<title>Calculator</title>
+		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="theme-color" content="#ffffff" />
-
+		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/base.css" />
 		<link rel="stylesheet" href="css/preset.css" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="/calculator-app/style.css" />
 	</head>
 	<body>
-		<script src="js/script.js"></script>
+		<!-- Content -->
+		<div class="calculator">
+			<input type="text" class="calulator__display" />
+			<div class="calculator__buttons">
+				<div class="buttons__row-1">
+					<input type="text" class="button" value="AC" />
+					<input type="text" class="button" value="+/-" />
+					<input type="text" class="button" value="%" />
+					<input type="text" class="button" value="/" />
+				</div>
+				<div class="buttons__row-2">
+					<input type="text" class="button" value="7" />
+					<input type="text" class="button" value="8" />
+					<input type="text" class="button" value="9" />
+					<input type="text" class="button" value="*" />
+				</div>
+				<div class="buttons__row-3">
+					<input type="text" class="button" value="4" />
+					<input type="text" class="button" value="5" />
+					<input type="text" class="button" value="6" />
+					<input type="text" class="button" value="-" />
+				</div>
+				<div class="buttons__row-4">
+					<input type="text" class="button" value="1" />
+					<input type="text" class="button" value="2" />
+					<input type="text" class="button" value="3" />
+					<input type="text" class="button" value="+" />
+				</div>
+				<div class="buttons__row-5">
+					<input type="text" class="button" value="0" />
+					<input type="text" class="button" value="." />
+					<input type="text" class="button" value="=" />
+				</div>
+			</div>
+		</div>
+		<!-- Scripts -->
+		<script src="/calculator-app/script.js"></script>
 	</body>
 </html>
