Calculator app styles updated

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -6,50 +6,50 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="esydoc" />
 		<meta name="description" content="" />
-		<title>Calculator</title>
+		<title>Calculator App</title>
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="css/base.css" />
-		<link rel="stylesheet" href="css/preset.css" />
+		<link rel="stylesheet" href="/css/base.css" />
+		<link rel="stylesheet" href="/css/preset.css" />
 		<link rel="stylesheet" href="/calculator-app/style.css" />
 	</head>
 	<body>
 		<!-- Content -->
 		<div class="calculator">
-			<input type="text" class="calulator__display" />
+			<input type="text" class="calculator__display" placeholder="0" />
 			<div class="calculator__buttons">
 				<div class="buttons__row-1">
-					<input type="text" class="button" value="AC" />
-					<input type="text" class="button" value="+/-" />
-					<input type="text" class="button" value="%" />
-					<input type="text" class="button" value="/" />
+					<input type="button" class="row-1__button" value="C" />
+					<input type="button" class="row-1__button" value="±" />
+					<input type="button" class="row-1__button" value="%" />
+					<input type="button" class="row-1__button" value="÷" />
 				</div>
 				<div class="buttons__row-2">
-					<input type="text" class="button" value="7" />
-					<input type="text" class="button" value="8" />
-					<input type="text" class="button" value="9" />
-					<input type="text" class="button" value="*" />
+					<input type="button" class="row-2__button" value="7" />
+					<input type="button" class="row-2__button" value="8" />
+					<input type="button" class="row-2__button" value="9" />
+					<input type="button" class="row-2__button" value="×" />
 				</div>
 				<div class="buttons__row-3">
-					<input type="text" class="button" value="4" />
-					<input type="text" class="button" value="5" />
-					<input type="text" class="button" value="6" />
-					<input type="text" class="button" value="-" />
+					<input type="button" class="row-3__button" value="4" />
+					<input type="button" class="row-3__button" value="5" />
+					<input type="button" class="row-3__button" value="6" />
+					<input type="button" class="row-3__button" value="-" />
 				</div>
 				<div class="buttons__row-4">
-					<input type="text" class="button" value="1" />
-					<input type="text" class="button" value="2" />
-					<input type="text" class="button" value="3" />
-					<input type="text" class="button" value="+" />
+					<input type="button" class="row-4__button" value="1" />
+					<input type="button" class="row-4__button" value="2" />
+					<input type="button" class="row-4__button" value="3" />
+					<input type="button" class="row-4__button" value="+" />
 				</div>
 				<div class="buttons__row-5">
-					<input type="text" class="button" value="0" />
-					<input type="text" class="button" value="." />
-					<input type="text" class="button" value="=" />
+					<input type="button" class="row-5__button" value="0" />
+					<input type="button" class="row-5__button" value="." />
+					<input type="button" class="row-5__button" value="=" />
 				</div>
 			</div>
 		</div>
