Keypress logic completed

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -16,6 +16,8 @@
 		<link rel="stylesheet" href="/css/base.css" />
 		<link rel="stylesheet" href="/css/preset.css" />
 		<link rel="stylesheet" href="/calculator-app/style.css" />
+		<!-- Scripts -->
+		<script src="/calculator-app/math.js"></script>
 	</head>
 	<body>
 		<!-- Content -->
@@ -24,8 +26,8 @@
 			<div class="calculator__buttons">
 				<div class="buttons__row-1">
 					<input type="button" class="row-1__button" value="C" />
-					<input type="button" class="row-1__button" value="±" />
-					<input type="button" class="row-1__button" value="%" />
+					<input type="button" class="row-1__button" value="N" />
+					<input type="button" class="row-1__button" value="P" />
 					<input type="button" class="row-1__button" value="÷" />
 				</div>
 				<div class="buttons__row-2">
