Button logic updated

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -26,8 +26,8 @@
 			<div class="calculator__buttons">
 				<div class="buttons__row-1">
 					<input type="button" class="row-1__button" value="C" />
-					<input type="button" class="row-1__button" value="N" />
-					<input type="button" class="row-1__button" value="P" />
+					<input type="button" class="row-1__button" value="±" />
+					<input type="button" class="row-1__button" value="%" />
 					<input type="button" class="row-1__button" value="÷" />
 				</div>
 				<div class="buttons__row-2">
