simulateButtonClick function in progress

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -22,36 +22,36 @@
 	<body>
 		<!-- Content -->
 		<div class="calculator">
-			<input type="text" class="calculator__display" placeholder="0" />
+			<textarea type="text" class="calculator__display --scrollbar-hidden" placeholder="0" /></textarea>
 			<div class="calculator__buttons">
 				<div class="buttons__row-1">
-					<input type="button" class="row-1__button" value="C" />
-					<input type="button" class="row-1__button" value="±" />
-					<input type="button" class="row-1__button" value="%" />
-					<input type="button" class="row-1__button" value="÷" />
+					<input type="button" id="button clear" class="row-1__button" value="C" />
+					<input type="button" id="button invert" class="row-1__button" value="&plusmn;" />
+					<input type="button" id="button percent" class="row-1__button" value="&percnt;" />
+					<input type="button" id="button divide" class="row-1__button" value="&divide;" />
 				</div>
 				<div class="buttons__row-2">
-					<input type="button" class="row-2__button" value="7" />
-					<input type="button" class="row-2__button" value="8" />
-					<input type="button" class="row-2__button" value="9" />
-					<input type="button" class="row-2__button" value="×" />
+					<input type="button" id="button seven" class="row-2__button" value="7" />
+					<input type="button" id="button eight" class="row-2__button" value="8" />
+					<input type="button" id="button nine" class="row-2__button" value="9" />
+					<input type="button" id="button multiply" class="row-2__button" value="&times;" />
 				</div>
 				<div class="buttons__row-3">
-					<input type="button" class="row-3__button" value="4" />
-					<input type="button" class="row-3__button" value="5" />
-					<input type="button" class="row-3__button" value="6" />
-					<input type="button" class="row-3__button" value="-" />
+					<input type="button" id="button" class="row-3__button" value="4" />
+					<input type="button" id="button" class="row-3__button" value="5" />
+					<input type="button" id="button" class="row-3__button" value="6" />
+					<input type="button" id="button" class="row-3__button" value="&minus;" />
 				</div>
 				<div class="buttons__row-4">
-					<input type="button" class="row-4__button" value="1" />
-					<input type="button" class="row-4__button" value="2" />
-					<input type="button" class="row-4__button" value="3" />
-					<input type="button" class="row-4__button" value="+" />
+					<input type="button" id="button" class="row-4__button" value="1" />
+					<input type="button" id="button" class="row-4__button" value="2" />
+					<input type="button" id="button" class="row-4__button" value="3" />
+					<input type="button" id="button" class="row-4__button" value="&plus;" />
 				</div>
 				<div class="buttons__row-5">
-					<input type="button" class="row-5__button" value="0" />
-					<input type="button" class="row-5__button" value="." />
-					<input type="button" class="row-5__button" value="=" />
+					<input type="button" id="button" class="row-5__button" value="0" />
+					<input type="button" id="button" class="row-5__button" value="." />
+					<input type="button" id="button" class="row-5__button" value="&equals;" />
 				</div>
 			</div>
 		</div>
