simulateButtonClick function implemented

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -25,33 +25,33 @@
 			<textarea type="text" class="calculator__display --scrollbar-hidden" placeholder="0" /></textarea>
 			<div class="calculator__buttons">
 				<div class="buttons__row-1">
-					<input type="button" id="button clear" class="row-1__button" value="C" />
-					<input type="button" id="button invert" class="row-1__button" value="&plusmn;" />
-					<input type="button" id="button percent" class="row-1__button" value="&percnt;" />
-					<input type="button" id="button divide" class="row-1__button" value="&divide;" />
+					<input type="button" id="button" class="row-1__button clear" value="C" />
+					<input type="button" id="button" class="row-1__button invert" value="&plusmn;" />
+					<input type="button" id="button" class="row-1__button percent" value="&percnt;" />
+					<input type="button" id="button" class="row-1__button divide" value="&divide;" />
 				</div>
 				<div class="buttons__row-2">
-					<input type="button" id="button seven" class="row-2__button" value="7" />
-					<input type="button" id="button eight" class="row-2__button" value="8" />
-					<input type="button" id="button nine" class="row-2__button" value="9" />
-					<input type="button" id="button multiply" class="row-2__button" value="&times;" />
+					<input type="button" id="button" class="row-2__button seven" value="7" />
+					<input type="button" id="button" class="row-2__button eight" value="8" />
+					<input type="button" id="button" class="row-2__button nine" value="9" />
+					<input type="button" id="button" class="row-2__button  multiply" value="&times;" />
 				</div>
 				<div class="buttons__row-3">
-					<input type="button" id="button" class="row-3__button" value="4" />
-					<input type="button" id="button" class="row-3__button" value="5" />
-					<input type="button" id="button" class="row-3__button" value="6" />
-					<input type="button" id="button" class="row-3__button" value="&minus;" />
+					<input type="button" id="button" class="row-3__button four" value="4" />
+					<input type="button" id="button" class="row-3__button five" value="5" />
+					<input type="button" id="button" class="row-3__button six" value="6" />
+					<input type="button" id="button" class="row-3__button subtract" value="&minus;" />
 				</div>
 				<div class="buttons__row-4">
-					<input type="button" id="button" class="row-4__button" value="1" />
-					<input type="button" id="button" class="row-4__button" value="2" />
-					<input type="button" id="button" class="row-4__button" value="3" />
-					<input type="button" id="button" class="row-4__button" value="&plus;" />
+					<input type="button" id="button" class="row-4__button one" value="1" />
+					<input type="button" id="button" class="row-4__button two" value="2" />
+					<input type="button" id="button" class="row-4__button three" value="3" />
+					<input type="button" id="button" class="row-4__button add" value="&plus;" />
 				</div>
 				<div class="buttons__row-5">
-					<input type="button" id="button" class="row-5__button" value="0" />
-					<input type="button" id="button" class="row-5__button" value="." />
-					<input type="button" id="button" class="row-5__button" value="&equals;" />
+					<input type="button" id="button" class="row-5__button zero" value="0" />
+					<input type="button" id="button" class="row-5__button decimal" value="." />
+					<input type="button" id="button" class="row-5__button equals" value="&equals;" />
 				</div>
 			</div>
 		</div>
