Unnecessary classes removed/Stylesheet cleaned up

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -24,34 +24,34 @@
 		<div class="calculator">
 			<textarea type="text" class="calculator__display --scrollbar-hidden" placeholder="0" /></textarea>
 			<div class="calculator__buttons">
-				<div class="buttons__row-1">
-					<input type="button" class="row-1__button clear" value="C" />
-					<input type="button" class="row-1__button invert" value="&plusmn;" />
-					<input type="button" class="row-1__button percent" value="&percnt;" />
-					<input type="button" class="row-1__button divide" value="&divide;" />
+				<div>
+					<input type="button" class="special clear" value="C" />
+					<input type="button" class="special invert" value="&plusmn;" />
+					<input type="button" class="special percent" value="&percnt;" />
+					<input type="button" class="operator divide" value="&divide;" />
 				</div>
-				<div class="buttons__row-2">
-					<input type="button" class="row-2__button seven" value="7" />
-					<input type="button" class="row-2__button eight" value="8" />
-					<input type="button" class="row-2__button nine" value="9" />
-					<input type="button" class="row-2__button  multiply" value="&times;" />
+				<div>
+					<input type="button" class="integer seven" value="7" />
+					<input type="button" class="integer eight" value="8" />
+					<input type="button" class="integer nine" value="9" />
+					<input type="button" class="operator multiply" value="&times;" />
 				</div>
-				<div class="buttons__row-3">
-					<input type="button" class="row-3__button four" value="4" />
-					<input type="button" class="row-3__button five" value="5" />
-					<input type="button" class="row-3__button six" value="6" />
-					<input type="button" class="row-3__button subtract" value="&minus;" />
+				<div>
+					<input type="button" class="integer four" value="4" />
+					<input type="button" class="integer five" value="5" />
+					<input type="button" class="integer six" value="6" />
+					<input type="button" class="operator subtract" value="&minus;" />
 				</div>
-				<div class="buttons__row-4">
-					<input type="button" class="row-4__button one" value="1" />
-					<input type="button" class="row-4__button two" value="2" />
-					<input type="button" class="row-4__button three" value="3" />
-					<input type="button" class="row-4__button add" value="&plus;" />
+				<div>
+					<input type="button" class="integer one" value="1" />
+					<input type="button" class="integer two" value="2" />
+					<input type="button" class="integer three" value="3" />
+					<input type="button" class="operator add" value="&plus;" />
 				</div>
-				<div class="buttons__row-5">
-					<input type="button" class="row-5__button zero" value="0" />
-					<input type="button" class="row-5__button decimal" value="." />
-					<input type="button" class="row-5__button equals" value="&equals;" />
+				<div>
+					<input type="button" class="integer zero" value="0" />
+					<input type="button" class="special decimal" value="." />
+					<input type="button" class="operator equals" value="&equals;" />
 				</div>
 			</div>
 		</div>
