--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -22,36 +22,36 @@
 	<body>
 		<!-- Content -->
 		<div class="calculator">
-			<textarea type="text" class="calculator__display --scrollbar-hidden" placeholder="0" /></textarea>
+			<textarea type="text" id="display" class="calculator__display --scrollbar-hidden" placeholder="0" /></textarea>
 			<div class="calculator__buttons">
 				<div>
-					<input type="button" class="special clear" value="C" />
-					<input type="button" class="special invert" value="&plusmn;" />
-					<input type="button" class="special percent" value="&percnt;" />
-					<input type="button" class="operator divide" value="&divide;" />
+					<input type="button" id="clear" class="clear__button" value="C" />
+					<input type="button" id="invert" class="invert__button" value="&plusmn;" />
+					<input type="button" id="percent" class="percent__button" value="&percnt;" />
+					<input type="button" id="operator" class="operator divide__button" value="&divide;" />
 				</div>
 				<div>
-					<input type="button" class="integer seven" value="7" />
-					<input type="button" class="integer eight" value="8" />
-					<input type="button" class="integer nine" value="9" />
-					<input type="button" class="operator multiply" value="&times;" />
+					<input type="button" id="digit" class="digit seven__button" value="7" />
+					<input type="button" id="digit" class="digit eight__button" value="8" />
+					<input type="button" id="digit" class="digit nine__button" value="9" />
+					<input type="button" id="operator" class="operator multiply__button" value="&times;" />
 				</div>
 				<div>
-					<input type="button" class="integer four" value="4" />
-					<input type="button" class="integer five" value="5" />
-					<input type="button" class="integer six" value="6" />
-					<input type="button" class="operator subtract" value="&minus;" />
+					<input type="button" id="digit" class="digit four__button" value="4" />
+					<input type="button" id="digit" class="digit five__button" value="5" />
+					<input type="button" id="digit" class="digit six__button" value="6" />
+					<input type="button" id="operator" class="operator subtract__button" value="&minus;" />
 				</div>
 				<div>
-					<input type="button" class="integer one" value="1" />
-					<input type="button" class="integer two" value="2" />
-					<input type="button" class="integer three" value="3" />
-					<input type="button" class="operator add" value="&plus;" />
+					<input type="button" id="digit" class="digit one__button" value="1" />
+					<input type="button" id="digit" class="digit two__button" value="2" />
+					<input type="button" id="digit" class="digit three__button" value="3" />
+					<input type="button" id="operator" class="operator add__button" value="&plus;" />
 				</div>
 				<div>
-					<input type="button" class="integer zero" value="0" />
-					<input type="button" class="special decimal" value="." />
-					<input type="button" class="operator equals" value="&equals;" />
+					<input type="button" id="digit" class="digit zero__button" value="0" />
+					<input type="button" id="decimal" class="decimal__button" value="." />
+					<input type="button" id="operator" class="operator equals__button" value="&equals;" />
 				</div>
 			</div>
 		</div>
