Classes and rules cleaned up

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -25,33 +25,33 @@
 			<textarea type="text" id="display" class="calculator__display --scrollbar-hidden" placeholder="0" /></textarea>
 			<div class="calculator__buttons">
 				<div>
-					<input type="button" id="clear" class="special clear__button" data-key="c" value="C" />
-					<input type="button" id="invert" class="special invert__button" data-key="i" value="&plusmn;" />
-					<input type="button" id="percent" class="special percent__button" data-key="p" value="&percnt;" />
-					<input type="button" id="divide" class="operator divide__button" data-key="/" value="&divide;" />
+					<input type="button" id="clear" class="specialButton" data-key="c" value="C" />
+					<input type="button" id="invert" class="specialButton" data-key="i" value="&plusmn;" />
+					<input type="button" id="percent" class="specialButton" data-key="p" value="&percnt;" />
+					<input type="button" id="divide" class="operatorButton" data-key="/" value="&divide;" />
 				</div>
 				<div>
-					<input type="button" id="seven" class="digit seven__button" data-key="7" value="7" />
-					<input type="button" id="eight" class="digit eight__button" data-key="8" value="8" />
-					<input type="button" id="nine" class="digit nine__button" data-key="9" value="9" />
-					<input type="button" id="multiply" class="operator multiply__button" data-key="*" value="&times;" />
+					<input type="button" id="seven" class="digitButton" data-key="7" value="7" />
+					<input type="button" id="eight" class="digitButton" data-key="8" value="8" />
+					<input type="button" id="nine" class="digitButton" data-key="9" value="9" />
+					<input type="button" id="multiply" class="operatorButton" data-key="*" value="&times;" />
 				</div>
 				<div>
-					<input type="button" id="four" class="digit four__button" data-key="4" value="4" />
-					<input type="button" id="five" class="digit five__button" data-key="5" value="5" />
-					<input type="button" id="six" class="digit six__button" data-key="6" value="6" />
-					<input type="button" id="subtract" class="operator subtract__button" data-key="-" value="&minus;" />
+					<input type="button" id="four" class="digitButton" data-key="4" value="4" />
+					<input type="button" id="five" class="digitButton" data-key="5" value="5" />
+					<input type="button" id="six" class="digitButton" data-key="6" value="6" />
+					<input type="button" id="subtract" class="operatorButton" data-key="-" value="&minus;" />
 				</div>
 				<div>
-					<input type="button" id="one" class="digit one__button" data-key="1" value="1" />
-					<input type="button" id="two" class="digit two__button" data-key="2" value="2" />
-					<input type="button" id="three" class="digit three__button" data-key="3" value="3" />
-					<input type="button" id="add" class="operator add__button" data-key="+" value="&plus;" />
+					<input type="button" id="one" class="digitButton" data-key="1" value="1" />
+					<input type="button" id="two" class="digitButton" data-key="2" value="2" />
+					<input type="button" id="three" class="digitButton" data-key="3" value="3" />
+					<input type="button" id="add" class="operatorButton" data-key="+" value="&plus;" />
 				</div>
 				<div>
-					<input type="button" id="zero" class="digit zero__button" data-key="0" value="0" />
-					<input type="button" id="decimal" class="special decimal__button" data-key="." value="." />
-					<input type="button" id="equals" class="operator equals__button" data-key="=" value="&equals;" />
+					<input type="button" id="zero" class="digit zeroButton" data-key="0" value="0" />
+					<input type="button" id="decimal" class="specialButton" data-key="." value="." />
+					<input type="button" id="equals" class="operatorButton" data-key="=" value="&equals;" />
 				</div>
 			</div>
 		</div>
