--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -13,10 +13,10 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="/css/default.css" />
-		<link rel="stylesheet" href="/css/preset.css" />
+		<link rel="stylesheet" href="/calculator-app/default.css" />
+		<link rel="stylesheet" href="/calculator-app/preset.css" />
 		<link rel="stylesheet" href="/calculator-app/style.css" />
-		<link rel="stylesheet" href="/css/postset.css" />
+		<link rel="stylesheet" href="/calculator-app/style.css" />
 		<!-- Scripts -->
 		<script src="/calculator-app/math.js"></script>
 	</head>
