--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -19,48 +19,112 @@
 	<body>
 		<!-- Content -->
 		<div class="calculator">
-			<textarea type="text" id="display" class="calculator__display --scrollbarHidden" placeholder="0" /></textarea>
-			
+			<textarea
+				id="display"
+				class="calculator__display --scrollbarHidden"
+				placeholder="0"
+			></textarea>
+
 			<div>
-					<input type="button" class="calculator__button --clear --isHovered" id="clear" data-key="c" value="C" />
+				<input
+					type="button"
+					class="calculator__button --clear --isHovered"
+					id="clear"
+					data-key="c"
+					value="C"
+				/>
 
-					<input type="button" class="calculator__button" id="invert" data-key="i" value="&plusmn;" />
+				<input
+					type="button"
+					class="calculator__button"
+					id="invert"
+					data-key="i"
+					value="&plusmn;"
+				/>
 
-					<input type="button" class="calculator__button --percent" id="percent" data-key="p" value="&percnt;" />
+				<input
+					type="button"
+					class="calculator__button --percent"
+					id="percent"
+					data-key="p"
+					value="&percnt;"
+				/>
 
-					<input type="button" class="calculator__button --delete --isHovered" id="delete" data-key="Backspace" value="DEL" />
+				<input
+					type="button"
+					class="calculator__button --delete --isHovered"
+					id="delete"
+					data-key="Backspace"
+					value="DEL"
+				/>
 
-					<input type="button" class="calculator__button" id="divide" data-key="/" value="&divide;" />
+				<input
+					type="button"
+					class="calculator__button"
+					id="divide"
+					data-key="/"
+					value="&divide;"
+				/>
 
-					<input type="button" class="calculator__button" id="one" data-key="1" value="1" />
+				<input type="button" class="calculator__button" id="one" data-key="1" value="1" />
 
-					<input type="button" class="calculator__button" id="two" data-key="2" value="2" />
+				<input type="button" class="calculator__button" id="two" data-key="2" value="2" />
 
-					<input type="button" class="calculator__button" id="three" data-key="3" value="3" />
+				<input type="button" class="calculator__button" id="three" data-key="3" value="3" />
 
-					<input type="button" class="calculator__button" id="multiply" data-key="*" value="&times;" />
+				<input
+					type="button"
+					class="calculator__button"
+					id="multiply"
+					data-key="*"
+					value="&times;"
+				/>
 
-					<input type="button" class="calculator__button" id="four" data-key="4" value="4" />
+				<input type="button" class="calculator__button" id="four" data-key="4" value="4" />
 
-					<input type="button" class="calculator__button" id="five" data-key="5" value="5" />
+				<input type="button" class="calculator__button" id="five" data-key="5" value="5" />
 
-					<input type="button" class="calculator__button" id="six" data-key="6" value="6" />	
-					
-					<input type="button" class="calculator__button" id="subtract" data-key="-" value="&minus;" />
+				<input type="button" class="calculator__button" id="six" data-key="6" value="6" />
 
-					<input type="button" class="calculator__button" id="seven" data-key="7" value="7" />
+				<input
+					type="button"
+					class="calculator__button"
+					id="subtract"
+					data-key="-"
+					value="&minus;"
+				/>
 
-					<input type="button" class="calculator__button" id="eight" data-key="8" value="8" />
+				<input type="button" class="calculator__button" id="seven" data-key="7" value="7" />
 
-					<input type="button" class="calculator__button" id="nine" data-key="9" value="9" />
+				<input type="button" class="calculator__button" id="eight" data-key="8" value="8" />
 
-					<input type="button" class="calculator__button" id="add" data-key="+" value="&plus;" />
+				<input type="button" class="calculator__button" id="nine" data-key="9" value="9" />
 
-					<input type="button" class="calculator__button" id="zero" data-key="0" value="0" />
+				<input
+					type="button"
+					class="calculator__button"
+					id="add"
+					data-key="+"
+					value="&plus;"
+				/>
 
-					<input type="button" class="calculator__button" id="decimal" data-key="." value="." />
+				<input type="button" class="calculator__button" id="zero" data-key="0" value="0" />
 
-					<input type="button" class="calculator__button --equals --isHovered" id="equals" data-key="=" value="&equals;" />	
+				<input
+					type="button"
+					class="calculator__button"
+					id="decimal"
+					data-key="."
+					value="."
+				/>
+
+				<input
+					type="button"
+					class="calculator__button --equals --isHovered"
+					id="equals"
+					data-key="="
+					value="&equals;"
+				/>
 			</div>
 		</div>
 		<!-- Scripts -->
