New color app project added

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -23,12 +23,13 @@
 				id="display"
 				class="calculator__display --scrollbarHidden"
 				placeholder="0"
+				maxlength="5"
 			></textarea>
 
 			<div>
 				<input
 					type="button"
-					class="calculator__button --clear --isHovered"
+					class="calculator__button --clear"
 					id="clear"
 					data-key="c"
 					value="C"
@@ -52,7 +53,7 @@
 
 				<input
 					type="button"
-					class="calculator__button --delete --isHovered"
+					class="calculator__button --delete"
 					id="delete"
 					data-key="Backspace"
 					value="DEL"
@@ -120,7 +121,7 @@
 
 				<input
 					type="button"
-					class="calculator__button --equals --isHovered"
+					class="calculator__button --equals"
 					id="equals"
 					data-key="="
 					value="&equals;"
