Color app structure and style update

--- a/color-app/index.html
+++ b/color-app/index.html
@@ -28,17 +28,29 @@
 				value="Generate Color"
 			/>
 
-			<label for="hexOutput" id="outputLabel" class="userBox__outputLabel">HEX:</label>
+			<label for="hexOutput" id="outputLabel" class="userBox__outputLabel">hex output</label>
 
-			<output id="hexOutput" class="userBox__outputValue --forcedSelectable"></output>
+			<output
+				id="hexOutput"
+				class="userBox__outputValue --forcedSelectable"
+				data-tooltip="Click to highlight"
+			></output>
 
-			<label for="rgbOutput" id="outputLabel" class="userBox__outputLabel">RGB:</label>
+			<label for="rgbOutput" id="outputLabel" class="userBox__outputLabel">rgb output</label>
 
-			<output id="rgbOutput" class="userBox__outputValue --forcedSelectable"></output>
+			<output
+				id="rgbOutput"
+				class="userBox__outputValue --forcedSelectable"
+				data-tooltip="Click to highlight"
+			></output>
 
-			<label for="hslOutput" id="outputLabel" class="userBox__outputLabel">HSL:</label>
+			<label for="hslOutput" id="outputLabel" class="userBox__outputLabel">hsl output</label>
 
-			<output id="hslOutput" class="userBox__outputValue --forcedSelectable"></output>
+			<output
+				id="hslOutput"
+				class="userBox__outputValue --forcedSelectable"
+				data-tooltip="Click to highlight"
+			></output>
 
 			<input
 				type="button"
