Color app styles updates

--- a/color-app/index.html
+++ b/color-app/index.html
@@ -33,7 +33,7 @@
 			<output
 				id="hexOutput"
 				class="userBox__outputValue --forcedSelectable"
-				data-tooltip="Click to highlight"
+				data-tooltip="Click value to select"
 			></output>
 
 			<label for="rgbOutput" id="outputLabel" class="userBox__outputLabel">rgb output</label>
@@ -41,7 +41,7 @@
 			<output
 				id="rgbOutput"
 				class="userBox__outputValue --forcedSelectable"
-				data-tooltip="Click to highlight"
+				data-tooltip="Click value to select"
 			></output>
 
 			<label for="hslOutput" id="outputLabel" class="userBox__outputLabel">hsl output</label>
@@ -49,7 +49,7 @@
 			<output
 				id="hslOutput"
 				class="userBox__outputValue --forcedSelectable"
-				data-tooltip="Click to highlight"
+				data-tooltip="Click value to select"
 			></output>
 
 			<input
