Meta tags updated/Formatted files

--- a/color-app/index.html
+++ b/color-app/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 	<head>
-		<!-- Metadata -->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="esydoc" />
+
+		<title>Color App</title>
+
+		<link rel="stylesheet" href="/color-app/style.css" />
+
 		<meta
 			name="description"
-			content="A colour app that can generate random colors and gradients in HEX, RGB and HSL values."
+			content="Generates random colors and gradients in hex/rgb/hsl formats."
 		/>
-		<title>Color App</title>
-		<!-- Favicon -->
+		<meta property="og:title" content="Color App" />
+		<meta
+			property="og:description"
+			content="Generates random colors and gradients in hex/rgb/hsl formats."
+		/>
+		<meta property="og:image" content="website-image.jpg" />
+		<meta property="og:image:alt" content="Image description" />
+		<meta property="og:locale" content="en_AU" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="og:url" content="www.website-name.com" />
+		<link rel="canonical" href="www.website-name.com" />
+
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<!-- Stylesheets -->
-		<link rel="stylesheet" href="/color-app/style.css" />
+
+		<meta name="theme-color" content="#101010" media="(prefers-color-scheme: dark)" />
+		<meta name="theme-color" content="#FCFCFC" media="(prefers-color-scheme: light)" />
 	</head>
 	<body>
-		<!-- Content -->
 		<div class="userBox">
 			<input
 				type="button"
@@ -28,7 +42,7 @@
 				value="Generate Color"
 			/>
 
-			<label for="hexOutput" id="outputLabel" class="userBox__outputLabel">hex output</label>
+			<label for="hexOutput" id="outputLabel" class="userBox__outputLabel">hex</label>
 
 			<output
 				id="hexOutput"
@@ -36,7 +50,7 @@
 				data-tooltip="Click value to select"
 			></output>
 
-			<label for="rgbOutput" id="outputLabel" class="userBox__outputLabel">rgb output</label>
+			<label for="rgbOutput" id="outputLabel" class="userBox__outputLabel">rgb</label>
 
 			<output
 				id="rgbOutput"
@@ -44,7 +58,7 @@
 				data-tooltip="Click value to select"
 			></output>
 
-			<label for="hslOutput" id="outputLabel" class="userBox__outputLabel">hsl output</label>
+			<label for="hslOutput" id="outputLabel" class="userBox__outputLabel">hsl</label>
 
 			<output
 				id="hslOutput"
@@ -59,7 +73,7 @@
 				value="Generate Gradient"
 			/>
 		</div>
-		<!-- Scripts -->
+
 		<script src="/color-app/script.js"></script>
 	</body>
 </html>
