--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Metadata -->
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="esydoc" />
-		<meta name="description" content="" />
 		<title>Calculator App</title>
-		<!-- Favicons -->
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<meta property="og:title" content="" />
+		<meta property="og:type" content="" />
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="" />
+
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<!-- Stylesheets -->
+
 		<link rel="stylesheet" href="/calculator-app/style.css" />
-		<!-- Scripts -->
+
+		<meta name="theme-color" content="#fcfcfc" />
 	</head>
 	<body>
-		<!-- Content -->
 		<div class="calculator">
 			<textarea
 				id="display"
@@ -128,7 +131,7 @@
 				/>
 			</div>
 		</div>
-		<!-- Scripts -->
+
 		<script src="/calculator-app/script.js"></script>
 	</body>
 </html>
