--- a/templatehtml/index.template.html
+++ b/templatehtml/index.template.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Metadata -->
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="" />
-		<meta name="description" content="" />
 		<title></title>
-		<meta property="og:type" content="Website" />
-		<meta property="og:image" content="img/" />
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<meta property="og:title" content="" />
-		<meta property="og:description" content="" />
+		<meta property="og:type" content="" />
 		<meta property="og:url" content="" />
-		<!-- Favicon -->
+		<meta property="og:image" content="" />
+
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<!-- Stylesheets -->
+
 		<link rel="stylesheet" href="css/style.css" />
+
+		<meta name="theme-color" content="#fcfcfc" />
 	</head>
 	<body>
-		<!-- Content -->
-
-		<!-- Scripts -->
+		<!-- Add site/application content here -->
 		<script src="js/script.js"></script>
 	</body>
 </html>
